[package]
name = "flat-json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
serde = "1"
serde_json = "1"

[dev-dependencies]
criterion = "0.5"
jsonb = "0.3"
simd-json = "0.11"

[[bench]]
name = "bench"
harness = false
