[package]
name = "jsonbb"
version = "0.2.1"
edition = "2021"
description = "A binary representation of json value, optimized for parsing and querying."
repository = "https://github.com/risingwavelabs/jsonbb"
keywords = ["json"]
categories = ["data-structures", "encoding"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
serde = "1"
serde_json = "1"
simd-json = { version = "0.13", optional = true }
smallvec = "1"

[dev-dependencies]
criterion = "0.5"
jsonb = "0.3"
simd-json = "0.13"

[[bench]]
name = "bench"
harness = false
