[package]
name = "jsonbb"
version = "0.2.2"
edition = "2021"
description = "A binary representation of json value, optimized for parsing and querying."
repository = "https://github.com/risingwavelabs/jsonbb"
keywords = ["json"]
categories = ["data-structures", "encoding"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Use sufficient precision when parsing fixed precision floats from JSON to
# ensure that they maintain accuracy when round-tripped through JSON. This comes
# at an approximately 2x performance cost for parsing floats compared to the
# default best-effort precision.
#
# Unlike arbitrary_precision, this feature makes f64 -> JSON -> f64 produce
# output identical to the input.
float_roundtrip = ["serde_json/float_roundtrip"]

# Use an arbitrary precision number representation for jsonbb::NumberRef. This
# allows JSON numbers of arbitrary size/precision to be read into a NumberRef and
# written back to a JSON string without loss of precision.
#
# Unlike float_roundtrip, this feature makes JSON -> jsonbb::NumberRef -> JSON
# produce output identical to the input.
arbitrary_precision = ["serde_json/arbitrary_precision"]


[dependencies]
bytes = "1"
serde = "1"
serde_json = "1"
simd-json = { version = "0.13", optional = true }
smallvec = "1"

[dev-dependencies]
criterion = "0.5"
jsonb = "0.3"
simd-json = "0.13"

[[bench]]
name = "bench"
harness = false
