[package]
name = "jsonbb_path"
version = "0.6.4"
edition = "2021"
license = "MIT"
authors = ["Trevor Hilton <trevor.hilton@gmail.com>"]
description = "Query jsonbb Values using JSONPath"
documentation = "https://docs.rs/jsonbb_path"
repository = "https://github.com/risingwavelabs/jsonbb"
readme = "README.md"
keywords = ["json", "jsonpath", "json_path"]

[features]
trace = ["dep:tracing"]
functions = []

[dependencies]
inventory = { version = "0.3.4" }
nom = "7.1.3"
once_cell = { version = "1.17.1" }
regex = "1.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonbb = { version = "0.1.2", path = "../jsonbb" }
thiserror = "1.0"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
test-log = { version = "0.2.11", default-features = false, features = [
    "trace",
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
] }
