[package]
name = "jsonbb_path_macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
    "Trevor Hilton <trevor.hilton@gmail.com>",
    "Runji Wang <wangrunji0408@163.com>",
]
description = "Macros for the jsonbb_path crate"
repository = "https://github.com/risingwavelabs/jsonbb"
readme = "README.md"
keywords = ["json", "jsonpath", "json_path"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
